--- a/crates/biome_fs/Cargo.toml
+++ b/crates/biome_fs/Cargo.toml
@@ -21,6 +21,7 @@ enumflags2        = { workspace = true, features = ["serde"] }
 oxc_resolver      = { workspace = true }
 papaya            = { workspace = true }
 parking_lot       = { version = "0.12.3", features = ["arc_lock"] }
+path-absolutize   = { workspace = true }
 rayon             = { workspace = true }
 rustc-hash        = { workspace = true }
 schemars          = { workspace = true, optional = true }
